[tool.poetry]
name = " morefile"
version = "0.1.0"
description = ""
authors = ["yaaashi84 <yaaaashi.84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
peewee = "^3.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
